--- a/The Immortals/localization/english/ticontent_game_concepts_l_english.yml
+++ b/The Immortals/localization/english/ticontent_game_concepts_l_english.yml
@@ -1,3 +1,4 @@
 ﻿l_english:
   game_concept_TI_feature:0 "TI Features"
   game_concept_TI_feature_desc:0 "This is a custom game mechanic implemented by the 'The Immortals' mod team."
+  game_concept_TI_feature_i:0 "@TI_magic_icon!"
